catalogo html img folder

--- a/catalogo.html
+++ b/catalogo.html
@@ -38,7 +38,7 @@
         <h2>Cátalogo de EDITOLINE</h2>
         <!-- SECCION DE NOVELAS -->
         <section>
-            <h3>Novelas</h3>
+            <h3>Novela</h3>
             <div>
                 <figure>
                     <img src="#" alt="">
@@ -58,7 +58,8 @@
                     <img src="#" alt="">
                     <figcaption>NOVELA 3</figcaption>
                 </figure>
-                <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
+                <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi... <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nisi soluta unde officiis minus corporis labore odio repellendus eum nobis incidunt iste aliquid dignissimos tenetur laborum cum, ab magnam nesciunt!</span></p>
+                <button>Leer más</button>
             </div>
             <div>
                 <figure>
@@ -70,11 +71,11 @@
         </section>
         <!-- SECCION DE COMIC AMERICANO -->
         <section>
-            <h3>Novelas gráficas</h3>
+            <h3>Novela gráfica</h3>
             <div>
                 <figure>
                     <img src="#" alt="">
-                    <figcaption>NOVELA 1 <p><small>Autor</small></p></figcaption>
+                    <figcaption>NOVELA 1 <small>Autor</small></figcaption>
                 </figure>
                 <h5></h5>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi... <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nisi soluta unde officiis minus corporis labore odio repellendus eum nobis incidunt iste aliquid dignissimos tenetur laborum cum, ab magnam nesciunt!</span></p>
@@ -83,80 +84,82 @@
             <div>
                 <figure>
                     <img src="#" alt="">
-                    <figcaption>NOVELA 2</figcaption>
+                    <figcaption>NOVELA 2 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
             <div>
                 <figure>
                     <img src="#" alt="">
-                    <figcaption>NOVELA 3</figcaption>
+                    <figcaption>NOVELA 3 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
             <div>
                 <figure>
                     <img src="#" alt="">
-                    <figcaption>NOVELA 4</figcaption>
+                    <figcaption>NOVELA 4 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
              <div>
                 <figure>
                     <img src="#" alt="">
-                    <figcaption>NOVELA 5</figcaption>
+                    <figcaption>NOVELA 5 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
              <div>
                 <figure>
                     <img src="#" alt="">
-                    <figcaption>NOVELA 6</figcaption>
+                    <figcaption>NOVELA 6 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
              <div>
                 <figure>
                     <img src="#" alt="">
-                    <figcaption>NOVELA 7</figcaption>
+                    <figcaption>NOVELA 7 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
              <div>
                 <figure>
                     <img src="#" alt="">
-                    <figcaption>NOVELA 8</figcaption>
+                    <figcaption>NOVELA 8 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
         </section>
+        <!-- SECCION DE MANGA -->
         <section>
             <h3>Manga</h3>
              <div>
                 <figure>
                     <img src="#" alt="">
-                    <figcaption>NOVELA 1</figcaption>
+                    <figcaption>NOVELA 1 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
             <div>
                 <figure>
                     <img src="#" alt="">
-                    <figcaption>NOVELA 2</figcaption>
+                    <figcaption>NOVELA 2 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
             <div>
                 <figure>
                     <img src="#" alt="">
-                    <figcaption>NOVELA 3</figcaption>
+                    <figcaption>NOVELA 3 <small>Autor</small></figcaption>
                 </figure>
-                <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
+                <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi... <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nisi soluta unde officiis minus corporis labore odio repellendus eum nobis incidunt iste aliquid dignissimos tenetur laborum cum, ab magnam nesciunt!</span></p>
+                <button>Leer más</button>
             </div>
             <div>
                 <figure>
                     <img src="#" alt="">
-                    <figcaption>NOVELA 4</figcaption>
+                    <figcaption>NOVELA 4 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
