--- a/catalogo.html
+++ b/catalogo.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="#">Cátalogo</a></li>
-            <li><a href="#">Noticias</a></li>
+            <li><a href="noticias.html">Noticias</a></li>
             <li><a href="#">Nuevos Talentos</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
