Cambios en el index.html: dejo un solo nav por el momento hasta mirar si nos convienen varios en la estructura del sitio. Hago propuesta de layout del home page e inicio diseño de tarjetas.

--- a/index.html
+++ b/index.html
@@ -18,55 +18,74 @@
     <!-- Menú de navegación -->
     <nav>
         <ul>
-            <li>Inicio</li>
-            <li>Cátalogo</li>
-            <li>Noticias</li>
-            <li>Nuevos Talentos</li>
-            <li>Contacto</li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="catalogo.html">Catalogo</a></li>
+            <li><a href="noticias.html">Noticias</a></li>
+            <li><a href="talentos.html">Talentos</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <!-- Cabecera -->
     <header>
-    <figure>
-        <img src="" alt="">
-    </figure>
+        <figure>
+            <img src="" alt="">
+        </figure>
         <h1>EDITOLINE</h1>
     </header>
 
     <main>
         <!-- Novela popular del mes -->
-        <figure><img src="" alt=""></figure>
+        <figure>
+            <img src="https://lorem.cat/1280x400" />
+        </figure>
+
         <section>
-            <h2>SECCION1</h2>
+            <h2>Top Sellers</h2>
+            <section>
+                <h2>SECCION 1</h2>
+                <img src="https://lorem.cat/200x300" />
+                <p>Precio: 30€</p>
+                    <div>
+                        <button>Leer más</button>
+                        <button>Comprar</button>
+                    </div>
+            </section>
+            <section>
+                <h2>SECCION 2</h2>
+                <img src="https://lorem.cat/200x300" />
+            </section>
+            <section>
+                <h2>SECCION 3</h2>
+                <img src="https://lorem.cat/200x300" />
+            </section>
+            
+            <section>
+                <h2>SECCION 4</h2>
+                <img src="https://lorem.cat/200x300" />
+            </section>
         </section>
-        <section>
-            <h2>SECCION 2</h2>
-        </section>
-        <section>
-            <h2>SECCION 3</h2>
-        </section>
+
     </main>
+
     <footer>
         <!-- Logo -->
-        <figure><img src="" alt=""></figure>
+        <figure>
+            <img src="" alt="">
+        </figure>
         <div>
             <h2>COMPAÑIA</h2>
-            <nav>
             <ul>
                 <li>Sobre EDITOLINE</li>
                 <li>Novedades</li>
             </ul>
-            </nav>
         </div>
 
         <div>
             <h2>CONECTA</h2>
-            <nav>
             <ul>
                 <li>REDES</li>
                 <li>REDES</li>
             </ul>
-            </nav>
         </div>
         <p><small>&copy;2026 Proyecto para CIFO La Violeta de Jose Salazar y Nzinga Mbande</small></p>
     </footer>
