Actualizacion de htmls

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#">Inicio</a></li>
             <li><a href="catalogo.html">Cátalogo</a></li>
             <li><a href="noticias.html">Noticias</a></li>
-            <li><a href="#">Nuevos Talentos</a></li>
+            <li><a href="talent.html">Nuevos Talentos</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
     </nav>
