--- a/noticias.html
+++ b/noticias.html
@@ -21,7 +21,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="catalogo.html">Cátalogo</a></li>
             <li><a href="#">Noticias</a></li>
-            <li><a href="#">Nuevos Talentos</a></li>
+            <li><a href="talent.html">Nuevos Talentos</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
     </nav>
