--- a/talent.html
+++ b/talent.html
@@ -18,7 +18,7 @@
     <!-- Menú de navegación -->
     <nav>
         <ul>
-            <li><a href="#">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="catalogo.html">Cátalogo</a></li>
             <li><a href="noticias.html">Noticias</a></li>
             <li><a href="#">Nuevos Talentos</a></li>
@@ -44,7 +44,8 @@
             <h2>SECCION 2</h2>
         </section>
         <section>
-            <h2>SECCION 3</h2>
+            <h2>formulario de contacto</h2>
+            
         </section>
     </main>
 
