Material para la carpeta IMG

--- a/catalogo.html
+++ b/catalogo.html
@@ -22,7 +22,7 @@
             <li><a href="#">Cátalogo</a></li>
             <li><a href="noticias.html">Noticias</a></li>
             <li><a href="talent.html">Nuevos Talentos</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <!-- Cabecera -->
@@ -33,6 +33,7 @@
         <h1>EDITOLINE</h1>
     </header>
 
+    <!-- CONTENIDO PRINCIPAL -->
     <main>
         <!-- CATALOGO PRINCIPAL -->
         <h2>Cátalogo de EDITOLINE</h2>
