--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
         <p>EDIT-ONLINE</p>
         <ul>
-            <li><a href="index.html">INICIO</a></li>
+            <li><a href="#">INICIO</a></li>
             <li><a href="catalogo.html">CATALOGO</a></li>
             <li><a href="noticias.html">NOTICIAS</a></li>
             <li><a href="talent.html">TALENTOS</a></li>
@@ -33,6 +33,7 @@
         <h1>EDITOR'S PICK</h1>
     </header>
 
+    <!-- CONTENIDO PRINCIPAL -->
     <main>
         <!-- Novela popular del mes -->
 
