--- a/noticias.html
+++ b/noticias.html
@@ -22,7 +22,7 @@
             <li><a href="catalogo.html">Cátalogo</a></li>
             <li><a href="#">Noticias</a></li>
             <li><a href="talent.html">Nuevos Talentos</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <!-- Cabecera -->
@@ -33,6 +33,7 @@
         <h1>EDITOLINE</h1>
     </header>
 
+    <!-- CONTENIDO PRINCIPAL -->
     <main>
     <!-- Página solo de noticias con lo cual todo puede ser articles -->
     <h2>Noticias</h2>
