--- a/talent.html
+++ b/talent.html
@@ -22,7 +22,7 @@
             <li><a href="catalogo.html">Cátalogo</a></li>
             <li><a href="noticias.html">Noticias</a></li>
             <li><a href="#">Nuevos Talentos</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
 
