Update index.html Update catalogo.html Update style.css Update banner.jpg Update logo.jpg

--- a/catalogo.html
+++ b/catalogo.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Vina+Sans&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="css/style.css">
+    <!-- Mis estilos -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Menú de navegación -->
@@ -35,29 +36,29 @@
     </header>
 
     <!-- CONTENIDO PRINCIPAL -->
-    <main>
+    <main class="catalogo">
         <!-- CATALOGO PRINCIPAL -->
-        <h2>CATALOGO</h2>
+        <h2>CÁTALOGO</h2>
         <!-- SECCION DE NOVELAS -->
         <section>
             <h3>Novela</h3>
             <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 1</figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
             <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 2</figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
             <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 3</figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi... <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nisi soluta unde officiis minus corporis labore odio repellendus eum nobis incidunt iste aliquid dignissimos tenetur laborum cum, ab magnam nesciunt!</span></p>
@@ -65,7 +66,7 @@
             </div>
             <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 4</figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
@@ -76,7 +77,7 @@
             <h3>Novela gráfica</h3>
             <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 1 <small>Autor</small></figcaption>
                 </figure>
                 <h5></h5>
@@ -85,49 +86,49 @@
             </div>
             <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 2 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
             <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 3 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
             <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 4 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
-             <div>
+            <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 5 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
-             <div>
+            <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 6 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
-             <div>
+            <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 7 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
-             <div>
+            <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 8 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
@@ -136,23 +137,23 @@
         <!-- SECCION DE MANGA -->
         <section>
             <h3>Manga</h3>
-             <div>
+            <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 1 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
             <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 2 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
             </div>
             <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 3 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi... <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nisi soluta unde officiis minus corporis labore odio repellendus eum nobis incidunt iste aliquid dignissimos tenetur laborum cum, ab magnam nesciunt!</span></p>
@@ -160,7 +161,7 @@
             </div>
             <div>
                 <figure>
-                    <img src="#" alt="">
+                    <img src="img/CURE-cover.jpg" alt="">
                     <figcaption>NOVELA 4 <small>Autor</small></figcaption>
                 </figure>
                 <p><span>Resumen:</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptatem vitae temporibus dignissimos in vero natus sequi. </p>
@@ -194,6 +195,7 @@
             </ul>
             </nav>
         </div>
+
         <p><small>&copy;2026 Proyecto para CIFO La Violeta de Jose Salazar y Nzinga Mbande</small></p>
     </footer>
 </body>
