--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Vina+Sans&display=swap" rel="stylesheet">
-    <!-- Mis estilos -->
-    <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Menú de navegación -->
@@ -21,7 +20,7 @@
         <span class="material-symbols-outlined">menu</span>
         <ul>
             <li><a href="#" aria-current="page">Inicio</a></li>
-            <li><a href="catalogo.html">Cátalogo</a></li>
+            <li><a href="catalogo.html">Catalogo</a></li>
             <li><a href="noticias.html">Noticias</a></li>
             <li><a href="talent.html">Talentos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
@@ -34,9 +33,7 @@
     <!-- CONTENIDO PRINCIPAL -->
     <main>
         <!-- Novela popular del mes -->
-
         <section class="contenedor">
-        <section id="contenedor-top-sellers">
             <h2>Top Sellers</h2>
             <section class="tarjeta-precio">
                 <h2>SECCION 1</h2>
@@ -71,7 +68,7 @@
             
             <section class="tarjeta-precio">
                 <h2>SECCION 4</h2>
-                <figure>
+                 <figure>
                     <img src="./img/HYUKHYUK-cover.jpg" alt="">
                 </figure>
                     <div>
@@ -101,7 +98,7 @@
                         <button>Comprar</button>
                     </div>
             </section>
-                <section class="tarjeta-precio">
+                 <section class="tarjeta-precio">
                 <h2>SECCION 7</h2>
                 <figure>
                     <img src="./img/HYUKHYUK-cover.jpg" alt="">
@@ -230,3 +227,4 @@
     </footer>
 </body>
 </html>
+
