--- a/noticias.html
+++ b/noticias.html
@@ -35,7 +35,7 @@
     <main>
         <section class="contenedor">
             <h2>Noticias</h2>
-            <article>
+            <article class="noticia">
                 <h3>Titular Noticia</h3>
                  <figure>
                     <img src="https://lorem.cat/400x250" />
@@ -43,7 +43,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit obcaecati maiores non minima voluptates saepe dolor provident blanditiis architecto, quisquam maxime. Atque doloremque tenetur quod eius, ut odit consectetur perspiciatis...</p>
                 <button>Leer más</button>
             </article>
-            <article>
+            <article class="noticia">
                 <h3>Titular Noticia</h3>
                  <figure>
                     <img src="https://lorem.cat/400x250" />
@@ -51,7 +51,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit obcaecati maiores non minima voluptates saepe dolor provident blanditiis architecto, quisquam maxime. Atque doloremque tenetur quod eius, ut odit consectetur perspiciatis...</p>
                 <button>Leer más</button>
             </article>
-            <article>
+            <article class="noticia">
                 <h3>Titular Noticia</h3>
                  <figure>
                     <img src="https://lorem.cat/400x250" />
@@ -59,7 +59,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit obcaecati maiores non minima voluptates saepe dolor provident blanditiis architecto, quisquam maxime. Atque doloremque tenetur quod eius, ut odit consectetur perspiciatis...</p>
                 <button>Leer más</button>
             </article>
-            <article>
+            <article class="noticia">
                 <h3>Titular Noticia</h3>
                  <figure>
                     <img src="https://lorem.cat/400x250" />
@@ -67,7 +67,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit obcaecati maiores non minima voluptates saepe dolor provident blanditiis architecto, quisquam maxime. Atque doloremque tenetur quod eius, ut odit consectetur perspiciatis...</p>
                 <button>Leer más</button>
             </article>
-            <article>
+            <article class="noticia">
                 <h3>Titular Noticia</h3>
                  <figure>
                     <img src="https://lorem.cat/400x250" />
@@ -75,7 +75,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit obcaecati maiores non minima voluptates saepe dolor provident blanditiis architecto, quisquam maxime. Atque doloremque tenetur quod eius, ut odit consectetur perspiciatis...</p>
                 <button>Leer más</button>
             </article>
-            <article>
+            <article class="noticia">
                 <h3>Titular Noticia</h3>
                  <figure>
                     <img src="https://lorem.cat/400x250" />
