--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- Menú de navegación -->
+    <!-- Menú de navegación PRUEBA -->
     <nav>
         <p>EDIT-ONLINE</p>
         <span class="material-symbols-outlined">menu</span>
