Scroll bar horizontal para imagenes en header

--- a/catalogo.html
+++ b/catalogo.html
@@ -30,6 +30,12 @@
     
     <!-- Cabecera -->
     <header>
+        <div class="header-slider">
+            <img src="./img/banner.jpg" alt="">
+            <img src="./img/blue-cover.jpg" alt="">
+            <img src="./img/shila.jpg" alt="">
+            <img src="./img/RAY-cover.jpg" alt="">
+        </div>
         <h1>EDITOR'S PICK</h1>
     </header>
     <!-- CONTENIDO PRINCIPAL -->
