--- a/contacto.html
+++ b/contacto.html
@@ -30,7 +30,13 @@
 
     <!-- Cabecera -->
     <header>
-        <h1>EDITOLINE</h1>
+        <div class="header-slider">
+            <img src="./img/banner.jpg" alt="">
+            <img src="./img/blue-cover.jpg" alt="">
+            <img src="./img/shila.jpg" alt="">
+            <img src="./img/RAY-cover.jpg" alt="">
+        </div>
+        <h1>EDITOR'S PICK</h1>
     </header>
 
     <!-- CONTENIDO PRINCIPAL -->
