--- a/noticias.html
+++ b/noticias.html
@@ -29,6 +29,12 @@
     </nav>
     <!-- Cabecera -->
     <header>
+        <div class="header-slider">
+            <img src="./img/banner.jpg" alt="">
+            <img src="./img/blue-cover.jpg" alt="">
+            <img src="./img/shila.jpg" alt="">
+            <img src="./img/RAY-cover.jpg" alt="">
+        </div>
         <h1>EDITOR'S PICK</h1>
     </header>
 
