Cambios en orden de imagenes de header

--- a/catalogo.html
+++ b/catalogo.html
@@ -31,10 +31,10 @@
     <!-- Cabecera -->
     <header>
         <div class="header-slider">
-            <img src="./img/banner.jpg" alt="">
+            <img src="./img/RAY-banner.jpg" alt="">
             <img src="./img/blue-banner.jpg" alt="">
             <img src="./img/shila-banner.jpg" alt="">
-            <img src="./img/RAY-banner.jpg" alt="">
+            <img src="./img/banner.jpg" alt="">
         </div>
         <h1>EDITOR'S PICK</h1>
     </header>
@@ -58,7 +58,8 @@
                 </div>
                 <!-- Tarjeta Ver Más -->
                 <div>
-                    <button>Ver más</button>
+                    <button>Detalles</button>
+                    <button>Añadir</button>
                 </div>
             </section>
             <section class="tarjeta-revista">
@@ -67,16 +68,17 @@
                     <img src="./img/happy-cover.jpg" alt="">
                 </figure>
                 <!-- Resumen/Nombe/Autor -->
-                    <div>
-                        <p>Bajo el puente</p>
-                        <p><small>Nzinga Mbande</small></p>
-                        <p>Género: Romance</p>
-                        <p>Año: 2022</p>
-                    </div>
+                <div>
+                    <p>Bajo el puente</p>
+                    <p><small>Nzinga Mbande</small></p>
+                    <p>Género: Romance</p>
+                    <p>Año: 2022</p>
+                </div>
                 <!-- Tarjeta Ver Más -->
-                    <div>
-                        <button>Ver más</button>
-                    </div>
+                <div>
+                    <button>Detalles</button>
+                    <button>Añadir</button>
+                </div>
             </section> 
             <section class="tarjeta-revista">
                 <h2>SECCION 3</h2>
@@ -84,16 +86,17 @@
                     <img src="./img/happy-cover.jpg" alt="">
                 </figure>
                 <!-- Resumen/Nombe/Autor -->
-                    <div>
-                        <p>Bajo el puente</p>
-                        <p><small>Nzinga Mbande</small></p>
-                        <p>Género: Romance</p>
-                        <p>Año: 2022</p>
-                    </div>
+                <div>
+                    <p>Bajo el puente</p>
+                    <p><small>Nzinga Mbande</small></p>
+                    <p>Género: Romance</p>
+                    <p>Año: 2022</p>
+                </div>
                 <!-- Tarjeta Ver Más -->
-                    <div>
-                        <button>Ver más</button>
-                    </div>
+                <div>
+                    <button>Detalles</button>
+                    <button>Añadir</button>
+                </div>
             </section> 
         </section>
 
@@ -107,16 +110,17 @@
                     <img src="./img/CURE-cover.jpg" alt="">
                 </figure>
                 <!-- Resumen/Nombe/Autor -->
-                    <div>
-                        <p>Bajo el puente</p>
-                        <p><small>Nzinga Mbande</small></p>
-                        <p>Género: Romance</p>
-                        <p>Año: 2022</p>
-                    </div>
+                <div>
+                    <p>Bajo el puente</p>
+                    <p><small>Nzinga Mbande</small></p>
+                    <p>Género: Romance</p>
+                    <p>Año: 2022</p>
+                </div>
                 <!-- Tarjeta Precio -->
-                    <div>
-                        <button>Ver más</button>
-                    </div>
+                <div>
+                    <button>Detalles</button>
+                    <button>Añadir</button>
+                </div>
             </section>
             <section class="tarjeta-revista">
                 <h2>SECCION 2</h2>
@@ -124,16 +128,17 @@
                     <img src="./img/CURE-cover.jpg" alt="">
                 </figure>
                 <!-- Resumen/Nombe/Autor -->
-                    <div>
-                        <p>Bajo el puente</p>
-                        <p><small>Nzinga Mbande</small></p>
-                        <p>Género: Romance</p>
-                        <p>Año: 2022</p>
-                    </div>
+                <div>
+                    <p>Bajo el puente</p>
+                    <p><small>Nzinga Mbande</small></p>
+                    <p>Género: Romance</p>
+                    <p>Año: 2022</p>
+                </div>
                 <!-- Tarjeta Ver más -->
-                    <div>
-                        <button>Ver más</button>
-                    </div>
+                <div>
+                    <button>Detalles</button>
+                    <button>Añadir</button>
+                </div>
             </section>
             <section class="tarjeta-revista">
                 <h2>SECCION 3</h2>
@@ -141,16 +146,17 @@
                     <img src="./img/CURE-cover.jpg" alt="">
                 </figure>
                 <!-- Resumen/Nombe/Autor -->
-                    <div>
-                        <p>Bajo el puente</p>
-                        <p><small>Nzinga Mbande</small></p>
-                        <p>Género: Romance</p>
-                        <p>Año: 2022</p>
-                    </div>
+                <div>
+                    <p>Bajo el puente</p>
+                    <p><small>Nzinga Mbande</small></p>
+                    <p>Género: Romance</p>
+                    <p>Año: 2022</p>
+                </div>
                 <!-- Tarjeta Precio -->
-                    <div>
-                        <button>Ver más</button>
-                    </div>
+                <div>
+                    <button>Detalles</button>
+                    <button>Añadir</button>
+                </div>
             </section>
             <section class="tarjeta-revista">
                 <h2>SECCION 4</h2>
@@ -158,16 +164,17 @@
                     <img src="./img/CURE-cover.jpg" alt="">
                 </figure>
                 <!-- Resumen/Nombe/Autor -->
-                    <div>
-                        <p>Bajo el puente</p>
-                        <p><small>Nzinga Mbande</small></p>
-                        <p>Género: Romance</p>
-                        <p>Año: 2022</p>
-                    </div>
+                <div>
+                    <p>Bajo el puente</p>
+                    <p><small>Nzinga Mbande</small></p>
+                    <p>Género: Romance</p>
+                    <p>Año: 2022</p>
+                </div>
                 <!-- Tarjeta Precio -->
-                    <div>
-                        <button>Ver más</button>
-                    </div>
+                <div>
+                    <button>Detalles</button>
+                    <button>Añadir</button>
+                </div>
             </section>
         </section>
         
@@ -180,16 +187,17 @@
                     <img src="./img/HYUKHYUK-cover.jpg" alt="">
                 </figure>
                 <!-- Resumen/Nombe/Autor -->
-                    <div>
-                        <p>Bajo el puente</p>
-                        <p><small>Nzinga Mbande</small></p>
-                        <p>Género: Romance</p>
-                        <p>Año: 2022</p>
-                    </div>
+                <div>
+                    <p>Bajo el puente</p>
+                    <p><small>Nzinga Mbande</small></p>
+                    <p>Género: Romance</p>
+                    <p>Año: 2022</p>
+                </div>
                 <!-- Tarjeta Precio -->
-                    <div>
-                        <button>Ver más</button>
-                    </div>
+                <div>
+                    <button>Detalles</button>
+                    <button>Añadir</button>
+                </div>
             </section>
             <section class="tarjeta-revista">
                 <h2>SECCION 2</h2>
@@ -197,16 +205,17 @@
                     <img src="./img/HYUKHYUK-cover.jpg" alt="">
                 </figure>
                 <!-- Resumen/Nombe/Autor -->
-                    <div>
-                        <p>Bajo el puente</p>
-                        <p><small>Nzinga Mbande</small></p>
-                        <p>Género: Romance</p>
-                        <p>Año: 2022</p>
-                    </div>
+                <div>
+                    <p>Bajo el puente</p>
+                    <p><small>Nzinga Mbande</small></p>
+                    <p>Género: Romance</p>
+                    <p>Año: 2022</p>
+                </div>
                 <!-- Tarjeta Precio -->
-                    <div>
-                        <button>Ver más</button>
-                    </div>
+                <div>
+                    <button>Detalles</button>
+                    <button>Añadir</button>
+                </div>
             </section>
             <section class="tarjeta-revista">
                 <h2>SECCION 3</h2>
@@ -214,16 +223,17 @@
                     <img src="./img/HYUKHYUK-cover.jpg" alt="">
                 </figure>
                 <!-- Resumen/Nombe/Autor -->
-                    <div>
-                        <p>Bajo el puente</p>
-                        <p><small>Nzinga Mbande</small></p>
-                        <p>Género: Romance</p>
-                        <p>Año: 2022</p>
-                    </div>
+                <div>
+                    <p>Bajo el puente</p>
+                    <p><small>Nzinga Mbande</small></p>
+                    <p>Género: Romance</p>
+                    <p>Año: 2022</p>
+                </div>
                 <!-- Tarjeta Precio -->
-                    <div>
-                        <button>Ver más</button>
-                    </div>
+                <div>
+                    <button>Detalles</button>
+                    <button>Añadir</button>
+                </div>
             </section>
             <section class="tarjeta-revista">
                 <h2>SECCION 4</h2>
@@ -231,16 +241,17 @@
                     <img src="./img/HYUKHYUK-cover.jpg" alt="">
                 </figure>
                 <!-- Resumen/Nombe/Autor -->
-                    <div>
-                        <p>Bajo el puente</p>
-                        <p><small>Nzinga Mbande</small></p>
-                        <p>Género: Romance</p>
-                        <p>Año: 2022</p>
-                    </div>
+                <div>
+                    <p>Bajo el puente</p>
+                    <p><small>Nzinga Mbande</small></p>
+                    <p>Género: Romance</p>
+                    <p>Año: 2022</p>
+                </div>
                 <!-- Tarjeta Precio -->
-                    <div>
-                        <button>Ver más</button>
-                    </div>
+                <div>
+                    <button>Detalles</button>
+                    <button>Añadir</button>
+                </div>
             </section>
         </section>
 
