--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
         <span class="material-symbols-outlined">menu</span>
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="catalogo.html">Cátalogo</a></li>
+            <li><a href="catalogo.html">Catálogo</a></li>
             <li><a href="noticias.html">Noticias</a></li>
             <li><a href="talent.html">Nuevos Talentos</a></li>
             <li><a href="#" aria-current="page">Contacto</a></li>
