--- a/talent.html
+++ b/talent.html
@@ -31,6 +31,7 @@
      <!-- Cabecera -->
     <header>
         <div class="header-slider">
+            <img src="./img/blue-banner.jpg" alt="">
             <img src="./img/banner.jpg" alt="">
             <img src="./img/blue-banner.jpg" alt="">
             <img src="./img/shila-banner.jpg" alt="">
