--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,7 @@
     </header>
 
     <!-- CONTENIDO PRINCIPAL -->
-    <main class="contacto">
+    <main class="contenedor contacto">
         <!-- Formulario de contacto -->
         <section>
         <h2>CONTACTA CON NOSOTROS</h2>
@@ -73,10 +73,12 @@
         <!-- Mapa -->
         <section>
             <h2>Donde encontrarnos</h2>
+            <div>
             <p>Dirección:</p>
             <p>CIFO Barcelona - La Violeta</p>
             <p>Plaça Comte de Sert, 25</p>
             <p>C.P 08035 (Barcelona)</p>
+            </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.0381415084403!2d2.134054!3d41.4166907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4981b5fdca4b1%3A0x35e8d1d280af19bd!2sCentre%20d&#39;Innovaci%C3%B3%20i%20Formaci%C3%B3%20Ocupacional%20(CIFO)%20de%20Barcelona%20La%20Violeta!5e0!3m2!1ses!2ses!4v1770487015348!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
