Agrego filtros para usar en las imagenes, los dejo comentandos, no me convencen

--- a/talent.html
+++ b/talent.html
@@ -53,7 +53,8 @@
                 <div>
                     <h3>Nombre</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam numquam a commodi eveniet quia repellendus nulla, mollitia eius atque excepturi reiciendis at, nobis adipisci saepe, consequuntur ipsa sint aliquam pariatur!</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam numquam a commodi eveniet quia repellendus nulla, mollitia eius atque excepturi reiciendis at, nobis adipisci saepe, consequuntur ipsa sint aliquam pariatur!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam numquam a commodi eveniet quia repellendus nulla, mollitia eius atque excepturi reiciendis at, nobis adipisci saepe, consequuntur ipsa sint aliquam pariatur!</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam numquam a commodi eveniet quia repellendus nulla, mollitia eius atque excepturi reiciendis at, nobis adipisci saepe, consequuntur ipsa sint aliquam pariatur!</p>
+                    
                 </div>
             </article>
             <!-- SEGUNDO TALENTO -->
